# backend/models/community.php
@@ -201,6 +201,33 @@ class Community extends Model{
         return $result;
     }
 
+    public function setMembers(array $members){
+        @require_once("models/user.php");
+        $request = 'UPDATE member SET MEM_role_NB = :role WHERE MEM_user_NB = :user AND MEM_community_NB = :community';
+        $prepare = connexion::pdo()->prepare($request);
+        $values['community'] = $this->get('CMY_id_NB');
+
+        foreach($members as $user => $role){
+            if(!is_numeric($user) || !is_numeric($role)){
+                throw new Exception('Invalid value');
+                return;
+            }
+            $values['user'] = $user;
+            $values['role'] = $role;
+            try{
+                $prepare->execute($values);
+            }catch(PDOException $e){
+                if($e->errorInfo[2] === "Erreur : Veuillez nommer au moins un administrateur avant de vous rétrograder."){
+                    throw new Exception('Missing Administrator');
+                    return;
+                }
+                throw new Exception($e->errorInfo[0]);
+                return;
+            }
+        }
+    }
+
+
     public function getThemes(){
         @require_once("models/theme.php");
         $request = "SELECT * FROM theme WHERE THM_community_NB = :community";
